--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,7 @@ h3 {
   position: fixed;
   right: 20px;
   bottom: 20px;
-  background: #FF4533;
+  background: #C585FF;
   z-index: 99;
   width: 40px;
   height: 40px;
@@ -485,25 +485,25 @@ h3 {
 /* line 1, ../../Arafath/CL/December/236. Event-02/HTML/scss/_btn.scss */
 .boxed-btn {
   background: #fff;
-  color: #FF4533;
+  color: #C585FF;
   display: inline-block;
   padding: 12px 44px;
   font-family: "Anton", sans-serif;
   font-size: 16px;
   font-weight: 400;
   border: 0;
-  border: 1px solid #FF4533;
+  border: 1px solid #C585FF;
   text-align: center;
-  color: #FF4533 !important;
+  color: #C585FF !important;
   text-transform: capitalize;
   cursor: pointer;
 }
 
 /* line 15, ../../Arafath/CL/December/236. Event-02/HTML/scss/_btn.scss */
 .boxed-btn:hover {
-  background: #FF4533;
+  background: #C585FF;
   color: #fff !important;
-  border: 1px solid #FF4533;
+  border: 1px solid #C585FF;
 }
 
 /* line 20, ../../Arafath/CL/December/236. Event-02/HTML/scss/_btn.scss */
@@ -518,7 +518,7 @@ h3 {
 
 /* line 27, ../../Arafath/CL/December/236. Event-02/HTML/scss/_btn.scss */
 .boxed-btn3 {
-  background: #FF4533;
+  background: #C585FF;
   /* IE6-9 */
   color: #fff;
   display: inline-block;
@@ -546,8 +546,8 @@ h3 {
 .boxed-btn3:hover {
   background: transparent;
   /* IE6-9 */
-  color: #FF4533 !important;
-  border: 1px solid #FF4533;
+  color: #C585FF !important;
+  border: 1px solid #C585FF;
 }
 
 /* line 51, ../../Arafath/CL/December/236. Event-02/HTML/scss/_btn.scss */
@@ -799,7 +799,7 @@ h3 {
 .section_title h4 {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #C585FF;
   font-family: "Anton", sans-serif;
   margin-bottom: 0;
 }
@@ -865,12 +865,12 @@ h3 {
 /* line 28, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav a:hover {
   background: transparent;
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 32, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav a.active {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 @media (max-width: 767px) {
@@ -1136,7 +1136,7 @@ h3 {
 
 /* line 100, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .buy_tkt .book_btn a {
-  background: #FF4533;
+  background: #C585FF;
   font-family: "Anton", sans-serif;
   padding: 12px 46px;
   font-size: 16px;
@@ -1158,8 +1158,8 @@ h3 {
 
 /* line 113, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .buy_tkt .book_btn a:hover {
-  border-color: #FF4533;
-  color: #FF4533;
+  border-color: #C585FF;
+  color: #C585FF;
   background: transparent;
 }
 
@@ -1239,7 +1239,7 @@ h3 {
 
 /* line 185, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a.active {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 187, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
@@ -1250,7 +1250,7 @@ h3 {
 
 /* line 192, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a:hover {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 196, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
@@ -1399,7 +1399,7 @@ h3 {
 
 /* line 291, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .header-top_area .social_media_links a:hover {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 297, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
@@ -1444,7 +1444,7 @@ h3 {
 
 /* line 321, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
 .header-area .header-top_area .short_contact_list ul li a i {
-  color: #FF4533;
+  color: #C585FF;
   margin-right: 7px;
 }
 
@@ -1576,7 +1576,7 @@ h3 {
 .slider_area .single_slider .slider_text span {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #C585FF;
   font-family: "Anton", sans-serif;
 }
 
@@ -2009,7 +2009,7 @@ h3 {
   font-family: "Anton", sans-serif;
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 54, ../../Arafath/CL/December/236. Event-02/HTML/scss/_about.scss */
@@ -2267,7 +2267,7 @@ h3 {
 
 /* line 37, ../../Arafath/CL/December/236. Event-02/HTML/scss/_performer.scss */
 .performar_area .single_performer .performer_heading span {
-  color: #FF4533;
+  color: #C585FF;
   font-weight: 400;
   font-size: 20px;
 }
@@ -2327,7 +2327,7 @@ h3 {
 .map_area .location_information h3 {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #C585FF;
   margin-bottom: 20px;
 }
 
@@ -2525,7 +2525,7 @@ h3 {
 
 /* line 90, ../../Arafath/CL/December/236. Event-02/HTML/scss/_program_details.scss */
 .program_details_area .program_detail_wrap .single_propram .porgram_top span {
-  color: #FF4533;
+  color: #C585FF;
   font-size: 30px;
   font-family: "Anton", sans-serif;
   display: block;
@@ -2585,7 +2585,7 @@ h3 {
 .footer .footer_top .footer_widget h4 {
   font-size: 30px;
   font-weight: 400;
-  color: #FF4533;
+  color: #C585FF;
   margin-bottom: 24px;
 }
 
@@ -2625,7 +2625,7 @@ h3 {
 
 /* line 45, ../../Arafath/CL/December/236. Event-02/HTML/scss/_footer.scss */
 .footer .copy-right_text .copy_right a {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /*=================== contact banner start ====================*/
@@ -4122,7 +4122,7 @@ h6 {
 
 /* line 14, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
 .blog_area a:hover, .blog_area a :hover {
-  background: -webkit-linear-gradient(131deg, #FF4533 0%, #FF4533 99%);
+  background: -webkit-linear-gradient(131deg, #C585FF 0%, #C585FF 99%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-decoration: none;
@@ -4633,7 +4633,7 @@ h6 {
 
 /* line 544, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
 .blog_details a:hover {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 549, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
@@ -4701,7 +4701,7 @@ h6 {
   left: 10px;
   display: block;
   color: #fff;
-  background-color: #FF4533;
+  background-color: #C585FF;
   padding: 8px 15px;
   border-radius: 5px;
 }
@@ -4929,7 +4929,7 @@ h6 {
 
 /* line 842, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
 .blog_right_sidebar .tag_cloud_widget ul li a:hover {
-  background: #FF4533;
+  background: #C585FF;
   color: #fff !important;
   -webkit-text-fill-color: #fff;
   text-decoration: none;
@@ -5177,7 +5177,7 @@ h6 {
 
 /* line 1208, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
 .single-post-area .blog-author a:hover {
-  color: #FF4533;
+  color: #C585FF;
 }
 
 /* line 1213, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog.scss */
@@ -5606,7 +5606,7 @@ h6 {
 
 /* line 72, ../../Arafath/CL/December/236. Event-02/HTML/scss/_blog_part.scss */
 .blog_part .single-home-blog .card .card-body a {
-  color: #FF4533;
+  color: #C585FF;
   text-transform: uppercase;
   -webkit-transition: 0.8s;
   transition: 0.8s;
@@ -5633,7 +5633,7 @@ h6 {
   height: 10px;
   top: 5px;
   left: 0;
-  background-color: #FF4533;
+  background-color: #C585FF;
   border-radius: 50%;
 }
 
