Start creating 10th events

--- a/css/style.css
+++ b/css/style.css
@@ -1521,6 +1521,10 @@ h3 {
   background-image: url(../img/performer/sum-it-up.png);
 }
 
+.breaking_barriers_bg {
+  background-image: url(../img/performer/breaking-barriers.png);
+}
+
 /* line 4, ../../Arafath/CL/December/236. Event-02/HTML/scss/_slider.scss */
 .slider_bg_2 {
   background-image: url(../img/mathtrix.png);
