Fix typo in mystifiezzeria event name

--- a/css/style.css
+++ b/css/style.css
@@ -1545,8 +1545,8 @@ h3 {
   background-image: url(../img/performer/mathopoly.png);
 }
 
-.mystifiezzera_bg {
-  background-image: url(../img/performer/mystifiezzera.png);
+.mystifiezzeria_bg {
+  background-image: url(../img/performer/mystifiezzeria.png);
 }
 
 .operation_breakout_bg {
